# ak-lab3

./: README.md
CMake/: CMakeLists.txt  main.cpp
CMakeBuild/: CMakeApp  CMakeCache.txt  Makefile  cmake_install.cmake
Make/: Makefile
MakeBuild/: MakefileApp
Ninja/: build.ninja  rules.ninja
NinjaBuild/: CMakeApp  CMakeCache.txt  Makefile  cmake_install.cmake
